sandbox/output
StringCalculatorTest.java:37: error: method addWithMultipleInput() is already defined in class StringCalculatorTest
    public void addWithMultipleInput() {
                ^
1 error
